--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -106,10 +106,15 @@ nav a {
 }
 
 /* main section styles */
-main{
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
+
+main section {
+    margin-top: 130px;
+}
+
 /* about section styles */
 .about {
     padding: 130px;
@@ -117,19 +122,51 @@ main{
     background-color: #FFF8F3;
     margin: 130px 0;
 }
-.about-info-container{
+
+.about-info-container {
     display: flex;
     justify-content: space-around;
 }
-.about-info{
+
+.about-info {
     text-align: center;
 }
-.about-info-title{
+
+.about-info-title {
     font-weight: 400;
 }
-.about-info-description{
+
+.about-info-description {
     font-weight: 700;
 }
-#what-i-do-section{
+
+/* skill related style */
+.skill-container {
+    display: flex;
+    gap: 24px;
+}
+
+#what-i-do-section {
     padding: 30px 150px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-description {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+/* resume section */
+.resume-column-title {
+    color:  #474747;
+    font-size: 30px;
+    font-weight: 700;
+   
 }
